perf(936): PR 0 Head launch flags, measured before and after (design 17.2)
Drop -XX:TieredStopAtLevel=1 and add -XX:MetaspaceSize=128m at both Head
spawn sites (lib.rs, dev-runner.cjs); the Head keeps SerialGC. The dev-runner
no longer forks its flag set on AOT-cache presence, and a test pins the set.

The 917 Derisk 1 procedure is scripted (scripts/jseval/lane-f/) and run
paired on the same corpus and machine: full GCs go from 5 to 0 on first
launch and 3 to 0 on warm restart (every one was a Metaspace or CodeCache
threshold); the cost is about +30 MB idle / +50 MB loaded Head working set;
startup unchanged; search latency within single-run noise, recorded per
effective mode. Record under docs/design/lane-f-engine-jvm/evidence/pr0/.

Design files: H1 aligned with the front-matter title (docs-validate covers
docs/design/), handoff corrected, verified-facts re-verified at 76871d924
(five citations moved, two claims corrected), dated in section 0.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01DFZoUF3Cct1Mx7WqE7w3of